--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "jquery": "1.10.2",
     "angular-google-maps": "latest",
     "bluebird": "~2.3.11",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angular-facebook": "~0.2.3",
+    "angularjs-facebook-sdk": "~1.0.5"
   },
   "ignore": [
     "**/.*",
