--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "bluebird": "~2.3.11",
     "angular-file-upload": "~1.1.5",
     "angular-facebook": "~0.2.3",
-    "angularjs-facebook-sdk": "~1.0.5"
+    "angularjs-facebook-sdk": "~1.0.5",
+    "angular-bootstrap": "~0.12.0",
+    "bootstrap": "~3.3.1"
   },
   "ignore": [
     "**/.*",
