--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "~0.1.6",
     "busboy": "~0.2.9",
     "gm": "~1.17.0",
-    "forever": "~0.13.0"
+    "forever": "~0.13.0",
+    "nodemailer": "~1.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
